--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/myDb
+spring.datasource.username=myUser
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=validate
